examples/test/testpolicy7919.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7919
  namespace: namespace338
spec:
  podSelector:
    matchLabels:
      key20: value14
      key7: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value43
      podSelector:
        matchLabels:
          key41: value1
          key26: value32
          key46: value4
